--- a/portfolio-frontend/src/sections/About/ProfilePic.css
+++ b/portfolio-frontend/src/sections/About/ProfilePic.css
@@ -1,29 +1,25 @@
 .profile-pic {
-    width: 100%;
-    height: 100%;
-    max-width: 250px;
-    max-height: 250px;
-    margin: auto;
-    border-radius: 50%;
+  width: 300px;
+  max-width: 300px;
+  margin: 0;
+  border-radius: 50%;
+}
 
-  }
+.profile-pic img {
+  width: 300px;
+  border-radius: 50%;
+}
+
   
-  .profile-pic img {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    border-radius: 50%;
+@media (max-width: 768px) {
+  .profile-pic {
+    max-width: 150px;
   }
-  
-  @media (max-width: 768px) {
-    .profile-pic {
-      max-width: 150px;
-    }
+}
+
+@media (max-width: 480px) {
+  .profile-pic {
+    max-width: 80px;
   }
-  
-  @media (max-width: 480px) {
-    .profile-pic {
-      max-width: 80px;
-    }
-  }
+}
   
