--- a/portfolio-frontend/src/sections/About/Title.css
+++ b/portfolio-frontend/src/sections/About/Title.css
@@ -1,14 +1,12 @@
 .title-name {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: #011936;
-  }
-  
-.title-contact {
-    font-size: 16px;
-    margin-bottom: 20px;
+  font-size: 48px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #9FC490; /* Darker font color */
 }
 
-
-  
+.title-contact {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: white; /* Darker font color */
+}
