--- a/portfolio-frontend/src/sections/Projects/Projects.css
+++ b/portfolio-frontend/src/sections/Projects/Projects.css
@@ -1,55 +1,58 @@
-.projects {
+.project-card-container {
   margin: 20px;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex; /* Make this a flex container */
+  align-items: start; /* Align items from the start */
+  transition: box-shadow 0.3s ease; /* Hover effect */
 }
 
-.project-card-wrapper {
-  display: flex;
-  align-items: start;
-  margin: 10px 0;
+.project-card-container:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Hover effect */
 }
 
 .project-card {
+  display: flex; /* Make this a flex container */
+  align-items: start;
+  padding: 15px;
+}
+
+.project-info {
   flex: 1;
   padding: 15px;
   border-radius: 4px;
 }
 
 .icon-container {
-  margin-left: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-  max-width: 200px;
+  margin-right: 20px; /* Add right margin */
+  text-align: center;
+}
+
+.icon-container img {
+  max-width: 100px;
 }
 
 .project-card h3 {
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 10px;
 }
 
-img {
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  max-width: 100px;
-  max-height: 100px;
-  margin: auto;
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-}
-
 .project-card p {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
 }
 
-.project-card div {
+.tech {
   font-weight: bold;
-  margin: 0 0 5px 0;
+  margin: 10px 0;
+}
+
+.links {
+  display: flex;
+  gap: 20px;
+}
+
+.links a {
+  font-size: 24px;
 }
