changes to About component

--- a/portfolio-frontend/src/sections/About/Title.css
+++ b/portfolio-frontend/src/sections/About/Title.css
@@ -8,5 +8,5 @@
 .title-contact {
   font-size: 20px;
   margin-bottom: 20px;
-  color: white; /* Darker font color */
+  color: #9FC490; /* Darker font color */
 }
